--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ï»¿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-£¼meta http-equiv="content-Type" content="text/html; charset=gb2312"£¾
+ï¼œmeta http-equiv="content-Type" content="text/html; charset=utf-8"ï¼ž
 <title>{{ page.title }}</title>
 </head>
 
